src/officehours_ui/static/css/main.css
/* ... */
h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
	margin: 1em 0 .5em 0;
	font-weight: 700;
}

h1, .h1 {
	margin: .75em 0 .5em 0;
	color: #00274c;
}

h2, .h2 {
	color: #40658f;
}

h3, .h3 {
	color: #555555;
}

.alert {
	padding: 1.25rem;
}

.alert .h4.alert-heading {
	margin-top: 0;
}

.border-dark {
	border-color: #cecbc9 !important;
}

a:not(.btn), a:link:not(.btn), a:visited:not(.btn) {
	color: #0060ba;
}

a:hover {
	color: #0060ba;
}

.alert a:not(.btn) {
	text-decoration: underline;
}

p a:not(.btn) {
	text-decoration: underline;
}

.btn-warning:focus {
	box-shadow: 0 0 0 0.2rem #0c3dde7f;
}

.bottom-right {
	position: fixed;
	bottom: 0;
	right: 12px;
	z-index: 9999
}

.jumbotron {
	padding: 1.25rem;
}

/* !important is needed to override another !important used in the text-emphasis Bootstrap mixin.
   We should re-evaluate this in the future and potentially customize the danger value using Sass. */
.text-danger {
	color: var(--custom-red) !important;
}

.btn-danger {
	background-color: var(--custom-red);
	border-color: var(--custom-red);
}

.btn-danger:hover.btn-danger:not(:disabled), .btn-danger:focus.btn-danger:not(:disabled) {
/* .btn-danger:hover, .btn-danger:focus { */
	background-color: #BF0102;
	border-color: #BF0102;
}

.card-deck {
	display: flex;
	flex-direction: column;
	flex-flow: row wrap;
	margin-bottom: 2rem;
}

.card-deck>.card {
	flex-wrap: wrap;
	flex: initial;
	width: 46%;
	margin: 10px;
	border: 1px solid #cecbc9;
	vertical-align: middle;
}

@media (max-width:575px) {
	.card-deck>.card {
		width: 100%;
	}
}

.card-deck .card.col-12 {
	padding: 0;
}

.navbar-light .navbar-nav .nav-link {
	border-radius: 4px;
}

.navbar-light .navbar-nav .active>.nav-link {
	background-color: #e4e1df;
	padding: 10px;
}

.navbar-light .navbar-nav .nav-item>.nav-link {
	padding: 10px;
}

#aux-nav .nav-link {
	color: white;
}

.navbar-light .navbar-nav .show>.nav-link, .navbar-light .navbar-nav .active>.nav-link, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active {
	background-color: #e4e1df;
}

.navbar-light .navbar-nav .nav-link:focus {
	background-color: #e4e1df;
	border-radius: 4px;
}

.navbar-nav .nav-item>.nav-link.active {
	background-color: #6189b7 !important;
}

.nav-pills .nav-link.active, .nav-pills .nav-link.active:hover, .nav-pills .nav-link.active:focus, .nav-pills .show>.nav-link {
	border-color: #e4e1df;
	background-color: #e4e1df;
	color: #555555;
	cursor: default;
}

/*.nav-pills a.nav-link:not(.active):hover*/

.nav-pills a.nav-link:hover {
	background-color: #0075bc;
	color: #ffffff;
}

.nav-pills a.nav-link.disabled {
	color: #655a52;
}

a.nav-link.disabled:hover, a.nav-link.disabled:active, a.nav-link.disabled:focus {
	border-color: transparent !important;
	background-color: transparent !important;
	color: #655a52 !important;
}

.nav-pills a.nav-link.disabled:hover {
	cursor: default;
}

.btn-primary, .btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
	border-color: #0075bc;
	background-color: #0075bc;
	color: #ffffff;
}

.btn-primary:hover {
	border-color: #0065a3;
	background-color: #0065a3;
	color: #ffffff;
}

.btn-outline-primary {
	border-color: #0075bc;
	color: #0075bc;
}

.btn-outline-primary:hover, .btn-outline-primary:focus, .btn-outline-primary:not(:disabled):not(.disabled).active, .btn-outline-primary:not(:disabled):not(.disabled):active, .show>.btn-outline-primary.dropdown-toggle {
	background-color: #0065a3;
	border-color: #0065a3;
	color: #ffffff;
}

.btn-outline-secondary {
	border-color: #655a52;
	color: #655a52;
}

.btn-outline-secondary:hover, .btn-outline-secondary:focus, .btn-outline-secondary:not(:disabled):not(.disabled).active, .btn-outline-secondary:not(:disabled):not(.disabled):active, .show>.btn-outline-secondary.dropdown-toggle {
	border-color: #655a52;
	background-color: #655a52;
	color: #ffffff;
}

.btn-success {
	color: #ffffff;
	background-color: var(--custom-green);
	border-color: var(--custom-green);
}

.btn-outline-success {
	border-color: var(--custom-green);
	color: var(--custom-green);
}

.btn-outline-success:hover, .btn-outline-success:focus, .btn-outline-success:active, .btn-outline-success:not(:disabled):not(.disabled):active, .btn-outline-success.selected {
	border-color: var(--custom-green);
	background-color: var(--custom-green);
	color: #ffffff;
}

.btn-link {
	color: #0075bc;
}

.btn-link:hover {
	color: #0065a3;
	cursor: pointer;
}

.card-items>.card {
	margin-bottom: 1.25em;
}

@media (max-width:768px) {
	.card-items>.card {
		width: 100% !important;
	}
}

#scrollTop {
	display: none;
	position: fixed;
	bottom: 20px;
	right: 30px;
	z-index: 99;
	font-size: 18px;
	border: none;
	outline: none;
	background-color: #D6D8DB;
	color: #333333;
	cursor: pointer;
	padding: 15px;
	border-radius: 12px;
	font-weight: bold;
}

#scrollTop:hover {
	background-color: #e4e1df;
}

.order-details-list {
	padding-left: 20px;
	margin-bottom: 0rem;
}

div h2:first-of-type {
	margin-top: .5rem;
}

h2.lead {
	font-weight: 700;
}

h3.lead {
	margin: 1.25rem 0 .5em 10px;
	font-size: 1.75rem;
	font-weight: 700;
}

h3.alert-heading {
	margin-top: .75rem;
	color: #555555;
}

.card-bottom {
	padding-bottom: 0;
}

.card-top {
	padding-top: 0;
}

.card-middle {
	margin-bottom: 20px;
	font-size: 1.25rem;
	background-color: #ececec;
	color: #393939;
}

.card-header {
	font-size: 1.25rem;
	font-weight: bold;
}

.card-width {
	width: 83%;
}

.select-button {
	display: block;
	margin: 0 auto;
}

.edit-toggle-button:focus-visible {
	outline: 2px solid var(--bs-blue) !important;
	border-radius: 0.5rem !important;
}

.selected-card {
	border-color: #28a745 !important;
	box-shadow: 5px 5px 10px grey;
	border-width: 3px !important;
}

.horizontal-card {
	display: flex;
}

.row-cards>.card {
	width: 100%;
}
/* ... */

